<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    apps:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SlidingMenuActivity">

    <include
        android:id="@+id/toolbar_new_left"
        layout="@layout/toolbar_new_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/existing_pwd_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/existing_pwd"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_cursor_indigo" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="35dp">

            <EditText
                android:id="@+id/new_pwd_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_cursor_indigo" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="35dp">

            <EditText
                android:id="@+id/confirm_new_pwd_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_pwd"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_cursor_indigo" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/save_pwd_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:onClick="save"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
